--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -37,15 +37,15 @@ en:
       updated: "Your password has been changed successfully. You are now signed in."
       updated_not_active: "Your password has been changed successfully."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
+      destroyed: "Tchau! Sua conta foi cancelada. Esperamos ver você de novo em breve."
+      signed_up: "Olá! Seja bem vindo! Meu nome é Vitor! Sou um tutor virtual que irá te ajudar na plataforma. Vamos lá?!"
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
       updated: "Your account has been updated successfully."
     sessions:
-      signed_in: "Logado com sucesso. Seja bem vindo ao ambiente!"
+      signed_in: "Olá! Bem vindo de volta!"
       signed_out: "Que pena que você precisou sair. Até mais!"
       already_signed_out: "Signed out successfully."
     unlocks:
