--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -47,7 +47,7 @@ en:
     sessions:
       signed_in: "Olá! Bem vindo de volta!"
       signed_out: "Que pena que você precisou sair. Até mais!"
-      already_signed_out: "Signed out successfully."
+      already_signed_out: "Deslogado com sucesso. Tchau."
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
